kubernetes/capi/addons/gateway-api/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: nginx-internal
  annotations:
    gateway.networking.k8s.io/description: "NGINX Gateway for internal traffic (*.home.io)"
spec:
  controllerName: k8s.nginx.org/nginx-gateway-controller
  description: "NGINX Gateway for internal cluster services"
  parametersRef:
    group: gateway.nginx.org
    kind: NginxGateway
    name: internal-config
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: nginx-external
  annotations:
    gateway.networking.k8s.io/description: "NGINX Gateway for external traffic (*.lab.techdufus.com)"
spec:
  controllerName: k8s.nginx.org/nginx-gateway-controller
  description: "NGINX Gateway for external services via Cloudflare Tunnel"
  parametersRef:
    group: gateway.nginx.org
    kind: NginxGateway
    name: external-config
